# sigil-graphql

./: .env.example  .flake8  CHANGELOG  CHANGELOG.md  Dockerfile  Pipfile  Procfile  README.md  conftest.py  docker-compose.yml  heroku.yml  pyproject.toml  pytest.ini  setup.py
scripts/: launch.heroku.sh  launch.local.sh  launch.sh  tests.sh
sigil/: __init__.py  __main__.py  app.py  conftest.py  settings.py
sigil/auth/: utils.py
sigil/domain/: entities.py  mocks.py
sigil/domain/campaign/: __init__.py  actions.py  entities.py  resolvers.py  schema.py
sigil/domain/campaign/entities/: __init__.py  base.py  mocks.py
sigil/domain/campaign/schemas/: data.graphql  mutations.graphql  wrappers.graphql
sigil/domain/campaign/tests/: test_actions.py  test_entities.py
sigil/domain/town/: __init__.py  actions.py  resolvers.py  schema.py
sigil/domain/town/entities/: __init__.py  base.py  mixins.py
sigil/domain/town/schemas/: data.graphql  mutations.graphql  wrappers.graphql
sigil/domain/town/tests/: test_mixins.py  test_town_actions.py  test_town_entities.py  test_town_mixins.py
sigil/graphql/: app.py  resolvers.py  schema.py  utils.py
sigil/graphql/schemas/: data.graphql  mutation.graphql  query.graphql
sigil/storage/: actions.py  base.py  cli.py  conftest.py  interfaces.py  manager.py  seed.py
sigil/storage/domain/: campaign.py  town.py
sigil/store/: actions.py  base.py  cli.py  conftest.py  interfaces.py  seed.py
sigil/store/adapters/: psql.py
sigil/store/adapters/psql/: __init__.py  (+4 more)
sigil/store/campaign/: base.py
sigil/store/domain/: campaign.py
(+33 files in other folders)
